--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,7 +125,7 @@ jobs:
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
             sudo yum -y install mpich openmpi-devel hdf5 hdf5-devel curl-devel wget && \
-            sudo yum -y install netcdf-devel && \
+            #sudo yum -y install netcdf-devel && \
             source /etc/profile.d/modules.sh && \
             module load mpi && \
             module load hdf5/1.10.5-gcc4.8.5 && \
@@ -175,7 +175,7 @@ jobs:
             fi && \
             export PATH=${{ github.workspace }}/../bin:${PATH}  && \
             python setup.py --version && \  
-            pip wheel . -w dist --no-deps && \ 
+            pip --use-feature=in-tree-build wheel . -w dist --no-deps && \ 
             check-manifest --verbose && \ 
             twine check dist/* && \
             deactivate'
