--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,7 +126,7 @@ jobs:
             sudo yum-config-manager --enable epel && \
             sudo yum -y install mpich openmpi-devel hdf5 hdf5-devel curl-devel wget && \
             #sudo yum -y install netcdf-devel && \
-            #source /etc/profile.d/modules.sh && \
+            source /etc/profile.d/modules.sh && \
             module load mpi && \
             #module load hdf5/1.10.5-gcc4.8.5 && \
             echo "Download and build PnetCDF version 1.12.1" && \
