--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,19 +138,18 @@ jobs:
             make install && \
             popd && \
             echo "Download and build netCDF version 4.7.4" && \
-            #wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
-            #tar -xzf netcdf-c-4.7.4.tar.gz && \
-            #pushd netcdf-c-4.7.4 && \
-            #export CPPFLAGS="-I/usr/include/hdf5/mpich -I${{ github.workspace }}/../include" && \
-            #export LDFLAGS="-L${{ github.workspace }}/../lib" && \
-            #export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
-            #./configure --prefix /home/runner/work/netcdf4-python/netcdf4-python/.. --disable-netcdf-4 --disable-dap --enable-shared --enable-parallel4  && \
-            #--enable-pnetcdf
-            #make -j 2 && \
-            #make install && \
-            #popd && \
+            wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-1.5.3.tar.gz && \
+            tar -xzf netcdf-c-1.5.3.tar.gz && \
+            pushd netcdf-c-1.5.3 && \
+            export CPPFLAGS="-I/usr/include/hdf5/mpich -I${{ github.workspace }}/../include" && \
+            export LDFLAGS="-L${{ github.workspace }}/../lib" && \
+            export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
+            ./configure --prefix /home/runner/work/netcdf4-python/netcdf4-python/.. --enable-netcdf-4 --enable-dap --enable-shared --enable-parallel4  --enable-pnetcdf && \
+            make -j 2 && \
+            make install && \
+            popd && \
             python -m pip install --upgrade pip && \
-            pip install netCDF4 && \
+            #pip install netCDF4 && \
             pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
             export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
             python setup.py install && \
