--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,7 +125,7 @@ jobs:
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
             sudo yum -y install mpich openmpi-devel hdf5 hdf5-devel curl-devel wget && \
-            sudo yum -y install netcd netcdf-devel && \
+            sudo yum -y install netcdf netcdf-devel && \
             source /etc/profile.d/modules.sh && \
             module load mpi && \
             #module load hdf5/1.10.5-gcc4.8.5 && \
