--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,7 +151,8 @@ jobs:
             #popd && \
             python -m pip install --upgrade pip && \
             python -m pip install netCDF4 && \
-            python -m pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
+            python -m pip install numpy cython cftime pytest twine wheel check-manifest && \
+            #mpi4py
             export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
             python setup.py install && \
             export PATH=${{ github.workspace }}/../bin:${PATH} && \
