--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,7 +157,7 @@ jobs:
             python setup.py install && \
             export PATH=${{ github.workspace }}/../bin:${PATH}  && \
             #python setup.py --version && \  
-            python -m pip --use-feature=in-tree-build wheel . -w dist --no-deps && \ 
+            pip wheel . -w dist --no-deps && \ 
             #check-manifest --verbose && \ 
             #twine check dist/* && \
             export PATH=${{ github.workspace }}/../bin:${PATH} && \
