--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -149,14 +149,14 @@ jobs:
             #make -j 2 && \
             #make install && \
             #popd && \
-            python -m pip install --upgrade pip && \
-            python -m pip install netCDF4 && \
-            python -m pip install numpy cython cftime pytest twine wheel check-manifest && \
+            pip install --upgrade pip && \
+            pip install netCDF4 && \
+            pip install numpy cython cftime pytest twine wheel check-manifest && \
             #mpi4py
             export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
             python setup.py install && \
-            export PATH=${{ github.workspace }}/../bin:${PATH}  && \
-            #python setup.py --version && \  
+            #export PATH=${{ github.workspace }}/../bin:${PATH}  && \
+            python setup.py --version && \  
             pip wheel . -w dist --no-deps && \ 
             #check-manifest --verbose && \ 
             #twine check dist/* && \
