--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,8 +157,9 @@ jobs:
             python setup.py install && \
             #export PATH=${{ github.workspace }}/../bin:${PATH}  && \
             #python setup.py --version && \  
+            export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
             pip wheel . -w dist --no-deps && \ 
-            #check-manifest --verbose && \ 
+            check-manifest --verbose && \ 
             #twine check dist/* && \
             #export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
             python checkversion.py && \
