--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install mpich libmpich-dev libhdf5-mpich-dev libcurl4-openssl-dev 
         echo "Download and build PnetCDF version ${PNETCDF_VERSION}"
-        wget https://parallel-netcdf.github.io/Release/pnetcdf-${PNETCDF_VERSION}.tar.gz
+        wget https://parallel-netcdf.github.io/Release/pnetcdf-1.12.1.tar.gz
         tar -xzf pnetcdf-${PNETCDF_VERSION}.tar.gz
         pushd pnetcdf-${PNETCDF_VERSION}
         ./configure --prefix $NETCDF_DIR --enable-shared --disable-fortran --disable-cxx
@@ -114,50 +114,63 @@ jobs:
           ${{ env.img }} ${{ env.py }} -m pip install -U  pip build
     - name: Install Ubuntu Dependencies
       run: |
-            uname -m
             docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
             ${{ env.img }} \
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
-            uname -m
+            uname -m && \
             yum install -y sudo && \
-            sudo yum -y update && \
+            sudo yum update && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
-            sudo yum -y install hdf5 hdf5-devel curl-devel wget && \
-            sudo yum -y install netcdf-devel && \
-            #source /etc/profile.d/modules.sh && \
-            #module load mpi && \
-            #module load hdf5/1.10.5-gcc4.8.5 && \
-            pip install --upgrade pip && \
-            pip install netCDF4 && \
-            pip install numpy cython cftime pytest wheel && \
-            #mpi4py
-            export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
+            sudo yum -y install mpich openmpi-devel hdf5-devel curl-devel wget && \
+            source /etc/profile.d/modules.sh && \
+            module load mpi && \
+            echo "Download and build PnetCDF version 1.12.1" && \
+            wget https://parallel-netcdf.github.io/Release/pnetcdf-1.12.1.tar.gz && \
+            tar -xzf pnetcdf-1.12.1.tar.gz && \
+            pushd pnetcdf-1.12.1 && \
+            ./configure --prefix ${{ github.workspace }}/.. --enable-shared --with-mpi --disable-fortran --disable-cxx && \
+            make -j 2 && \
+            make install && \
+            popd && \
+            echo "Download and build netCDF version 4.7.4" && \
+            wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
+            tar -xzf netcdf-c-4.7.4.tar.gz && \
+            pushd netcdf-c-4.7.4 && \
+            export CPPFLAGS="-I/usr/include/hdf5/mpich -I${{ github.workspace }}/../include" && \
+            export LDFLAGS="-L${{ github.workspace }}/../lib" && \
+            export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
+            ./configure CC="/usr/bin/arm-linux-gnueabihf-gcc-8" --prefix ${{ github.workspace }}/.. --enable-netcdf-4 --enable-shared --enable-dap --enable-parallel4 --enable-pnetcdf && \
+            make -j 2 && \
+            make install && \
+            popd && \
+			      pip install numpy cython cftime pytest twine wheel check-manifest mpi4py && \
+            export PATH=${{ github.workspace }}/../bin:${PATH} && \ 
             python setup.py install && \
-            #python setup.py --version && \  
-            #export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
+            export PATH=${{ github.workspace }}/../bin:${PATH} && \
             python checkversion.py && \
             cd test && \
             python run_all.py && \
-            deactivate'
-    - name: Build and Test Wheel
-      run: |
-            uname -m
-            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-            ${{ env.img }} \
-            bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
-            source .env/bin/activate && \
-            yum install -y sudo && \
-            sudo yum -y update && \
-            sudo yum install -y epel-release && \
-            sudo yum-config-manager --enable epel && \
-            sudo yum -y install hdf5 hdf5-devel netcdf-devel && \
-            pip install check-manifest twine && \
-            export PATH=/home/runner/work/netcdf4-python/netcdf4-python/../bin:${PATH} && \
+            # parallel (hdf5 for netcdf4, pnetcdf for netcdf3)
+            cd ../examples && \
+            mpirun.mpich -np 4 python mpi_example.py && \
+            if [ $? -ne 0 ] ; then
+              echo "hdf5 mpi test failed!"
+              exit 1
+            else
+              echo "hdf5 mpi test passed!"
+            fi && \
+            mpirun.mpich -np 4 python mpi_example.py NETCDF3_64BIT_DATA && \
+            if [ $? -ne 0 ] ; then
+              echo "pnetcdf mpi test failed!"
+              exit 1
+            else
+              echo "pnetcdf mpi test passed!"
+            fi && \
+            export PATH=${{ github.workspace }}/../bin:${PATH}  && \
+            python setup.py --version && \
             pip wheel . -w dist --no-deps && \
             check-manifest --verbose && \
-            pip install twine && \
             twine check dist/* && \
             deactivate'
-  
