--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,6 +138,8 @@ jobs:
             wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
             tar -xzf netcdf-c-4.7.4.tar.gz && \
             pushd netcdf-c-4.7.4 && \
+            source /etc/profile.d/modules.sh && \
+            module load mpi && \
             export CPPFLAGS="-I/usr/include/hdf5/mpich -I${{ github.workspace }}/../include" && \
             export LDFLAGS="-L${{ github.workspace }}/../lib" && \
             export LIBS="-lhdf5_mpich_hl -lhdf5_mpich -lm -lz" && \
