--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,7 +135,7 @@ jobs:
             make -j 2 && \
             make install && \
             popd && \
-            find mpich && \
+            find mpicc && \
             echo "Download and build netCDF version 4.7.4" && \
             wget ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-c-4.7.4.tar.gz && \
             tar -xzf netcdf-c-4.7.4.tar.gz && \
