--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,14 +124,15 @@ jobs:
             sudo yum update && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
-            sudo yum -y install mpich mpich-devel openmpi-devel hdf5-devel curl-devel wget && \
-            source /etc/profile.d/modules.sh && \
-            module load mpi && \
+            sudo yum -y install mpich mpich-devel openmpi-devel hdf5-mpich-devel libcurl-openssl-devel wget && \
+            #source /etc/profile.d/modules.sh && \
+            #module load mpi && \
             echo "Download and build PnetCDF version 1.12.1" && \
             wget https://parallel-netcdf.github.io/Release/pnetcdf-1.12.1.tar.gz && \
             tar -xzf pnetcdf-1.12.1.tar.gz && \
             pushd pnetcdf-1.12.1 && \
-            ./configure --prefix ${{ github.workspace }}/.. --enable-shared --with-mpi --disable-fortran --disable-cxx && \
+            #./configure --prefix ${{ github.workspace }}/.. --enable-shared --with-mpi --disable-fortran --disable-cxx && \
+            ./configure --prefix ${{ github.workspace }}/.. --enable-shared --disable-fortran --disable-cxx && \
             make -j 2 && \
             make install && \
             popd && \
