--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,7 +124,7 @@ jobs:
             sudo yum update && \
             sudo yum install -y epel-release && \
             sudo yum-config-manager --enable epel && \
-            sudo yum -y install mpich mpich-devel openmpi-devel hdf5-mpich-devel libcurl-openssl-devel wget && \
+            sudo yum -y install mpich mpich-devel openmpi-devel hdf5-mpich-devel libcurl-devel openssl-devel wget && \
             #source /etc/profile.d/modules.sh && \
             #module load mpi && \
             echo "Download and build PnetCDF version 1.12.1" && \
