--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,7 +118,7 @@ jobs:
             docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
             ${{ env.img }} \
             bash -exc '${{ env.py }} -m pip install virtualenv && ${{ env.py }} -m venv .env && \
-            source .env/bin/activate && \
+            #source .env/bin/activate && \
             uname -m && \
             yum install -y sudo && \
             sudo yum update && \
@@ -131,6 +131,7 @@ jobs:
             wget https://parallel-netcdf.github.io/Release/pnetcdf-1.12.1.tar.gz && \
             tar -xzf pnetcdf-1.12.1.tar.gz && \
             pushd pnetcdf-1.12.1 && \
+            sudo yum -y install mpich mpich-devel openmpi-devel hdf5-mpich-devel && \
             find /var -name mpic && \
             export PATH=/var/cache/yum/aarch64/7/epel/packages/:$PATH && \
             #./configure --prefix ${{ github.workspace }}/.. --enable-shared --with-mpi --disable-fortran --disable-cxx && \
